Added images, updated layouts, and typography

--- a/Development/pavilionhomepage.html
+++ b/Development/pavilionhomepage.html
@@ -20,18 +20,82 @@
 
         <!--HERO BANNER-->
         <div class="hero-banner">
-            <h6 class="hero--title">generate & <br>inspire. we are <br><span>pavilion</span></h6>
+            <h1 class="hero-title">generate & <br>inspire. we are <br><span>pavilion</span></h1>
         </div>
 
         <!--PROJECTS-->
-        <div class="pavilion-projects">
-            <span class="project-sub-header">latest projects</span>
-            <h5 class="project-header">Duis aute irure dolor</h5>
-            <ul class="project-menu">
-                <li class="project-list-item">all</li>
-                <li class="project-list-item">architecture</li>
-                <li class="project-list-item">interior design</li>
-            </ul>
+        <div class="section-container">
+            <span class="section-sub-header">latest projects</span>
+            <h5 class="section-header">view our projects</h5>    
+        </div>
+        <ul class="project-menu">
+            <li class="project-list-item">all</li>
+            <li class="project-list-item">architecture</li>
+            <li class="project-list-item">interior design</li>
+        </ul>
+
+        <!--PROJECT IMAGE CONTAINER-->
+        <div class="img-container">
+            <img src="./Images/pexels-max-avans-5101383.jpg" alt="">
+            <img src="./Images/pexels-adrien-olichon-2464430.jpg" alt="">
+            <img src="./Images/pexels-tobit-nazar-nieto-hernandez-3199265.jpg" alt="">
+        </div>
+
+        <!--ABOUT-->
+        <div class="section-container">
+            <h5 class="section-header">about pavilion</h5>    
+        </div>
+        <p class="about-content">
+            <span>pavilion architecture</span> is dedicated to providing you the best of architecture, with a focus on dependability and design. We're working to turn our passion for architecture into inspiration. We hope you enjoy our architecture as much as we enjoy offering them to you.
+        </p>
+        <!--SERVICES-->
+        <div class="section-container">
+            <span class="section-sub-header">our services</span>
+            <h5 class="section-header">we specialize in design</h5>    
+        </div>
+
+        <!--SERVICE IMAGE CONTAINER-->
+        <div class="img-container">
+            <div class="service-content">
+                <img src="./Images/pexels-max-vakhtbovych-6283960.jpg" alt="">
+                <div class="service-content-description">
+                    <h6 class="service-header">interior design</h5>
+                    <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>
+                </div>
+            </div>
+            <div class="service-content">
+                <img src="./Images/pexels-max-vakhtbovych-6283967.jpg" alt="">
+                <div class="service-content-description">
+                    <h6 class="service-header">architecture</h5>
+                    <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>
+                </div>
+            </div>
+        </div>
+
+        <!--TEAM-->
+        <div class="team-content">
+            <div class="team-member-content">
+                <img src="./Images/pexels-mentatdgt-937481.jpg" alt="">
+                <h6 class="team-member-header">senior architect</h6>
+                <p class="team-member-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>                
+            </div>
+            <div class="team-member-content">
+                <img src="./Images/pexels-mentatdgt-1024311.jpg" alt="">
+                <h6 class="team-member-header">marketing strategist</h6>
+                <p class="team-member-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>                 
+            </div>
+            <div class="team-member-content">
+                <img src="./Images/pexels-linkedin-sales-navigator-2182970.jpg" alt="">
+                <h6 class="team-member-header">senior engineer</h6>
+                <p class="team-member-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>                 
+            </div>
+        </div>
+        <div class="footer">
+            <p>2021 All rights reserved</p>
+            <p>pavilion@pavilion.co</p>
+            <p>facebook</p>
+            <p>instagram</p>
+            <p>linkedin</p>
         </div>
     </div>
 </body>
