Updated Header and Navbar

--- a/Development/pavilionhomepage.html
+++ b/Development/pavilionhomepage.html
@@ -21,6 +21,7 @@
         <!--HERO BANNER-->
         <div class="hero-banner">
             <h1 class="hero-title">generate & <br>inspire. we are <br><span>pavilion</span></h1>
+            <img src="./Images/pexels-max-vakhtbovych-6283968.jpg" alt="">
         </div>
 
         <!--PROJECTS-->
