Fix the typography for the hero banner

--- a/Development/pavilionhomepage.html
+++ b/Development/pavilionhomepage.html
@@ -11,15 +11,23 @@
     <!--CONTAINER-->
     <div class="container">
         <!--HEADER-->
-        <div class="header">
+        <div class="header row">
             <h6 class="logo">Pavilion</h6>
             <div class="navigational-bar">
                 <span class="toggle"></span>
             </div>
+            <ul class="navigational-menu">
+                <li class="menu-items">design</li>
+                <li class="menu-items">portfolio</li>
+                <li class="menu-items">about</li>      
+                <li class="menu-items">services</li>
+                <li class="menu-items">team</li>    
+                <li class="menu-items">contact</li>                                                                      
+            </ul>
         </div>
 
         <!--HERO BANNER-->
-        <div class="hero-banner">
+        <div class="hero-banner row">
             <h1 class="hero-title">generate & <br>inspire. we are <br><span>pavilion</span></h1>
             <img src="./Images/pexels-max-vakhtbovych-6283968.jpg" alt="">
         </div>
@@ -37,9 +45,17 @@
 
         <!--PROJECT IMAGE CONTAINER-->
         <div class="img-container">
-            <img src="./Images/pexels-max-avans-5101383.jpg" alt="">
-            <img src="./Images/pexels-adrien-olichon-2464430.jpg" alt="">
-            <img src="./Images/pexels-tobit-nazar-nieto-hernandez-3199265.jpg" alt="">
+            <div class="row">
+                <div class="span-1">
+                    <img src="./Images/pexels-max-avans-5101383.jpg" alt="">
+                </div>
+                <div class="span-1">
+                    <img src="./Images/pexels-adrien-olichon-2464430.jpg" alt="">
+                </div>
+                <div class="span-1">
+                    <img src="./Images/pexels-tobit-nazar-nieto-hernandez-3199265.jpg" alt="">                    
+                </div>    
+            </div>
         </div>
 
         <!--ABOUT-->
