Added responsive layout for desktop. Need to update the responsive images

--- a/Development/pavilionhomepage.html
+++ b/Development/pavilionhomepage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,35 +8,39 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>  
-    <!--CONTAINER-->
-    <div class="container">
-        <!--HEADER-->
-        <div class="header row">
-            <h6 class="logo">Pavilion</h6>
-            <div class="navigational-bar">
-                <span class="toggle"></span>
-            </div>
-            <ul class="navigational-menu">
-                <li class="menu-items">design</li>
-                <li class="menu-items">portfolio</li>
-                <li class="menu-items">about</li>      
-                <li class="menu-items">services</li>
-                <li class="menu-items">team</li>    
-                <li class="menu-items">contact</li>                                                                      
-            </ul>
-        </div>
 
-        <!--HERO BANNER-->
-        <div class="hero-banner row">
-            <h1 class="hero-title">generate & <br>inspire. we are <br><span>pavilion</span></h1>
+<body>
+    <!--HEADER-->
+    <div class="header">
+        <h6 class="logo">Pavilion</h6>
+        <div class="navigational-bar">
+            <span class="toggle"></span>
+        </div>
+        <ul class="navigational-menu">
+            <li class="menu-items">design</li>
+            <li class="menu-items">portfolio</li>
+            <li class="menu-items">about</li>
+            <li class="menu-items">services</li>
+            <li class="menu-items">team</li>
+            <li class="menu-items">contact</li>
+        </ul>
+    </div>
+
+    <!--HERO BANNER-->
+    <div class="hero-banner row">
+        <div class="banner-text-container span-6">
+            <h1 class="hero-title">generate & inspire<br> we are <span>pavilion</span></h1>
+        </div>
+        <div class="span-6">
             <img src="./Images/pexels-max-vakhtbovych-6283968.jpg" alt="">
         </div>
-
+    </div>
+    <!--CONTAINER-->
+    <div class="container">
         <!--PROJECTS-->
         <div class="section-container">
             <span class="section-sub-header">latest projects</span>
-            <h5 class="section-header">view our projects</h5>    
+            <h5 class="section-header">view our projects</h5>
         </div>
         <ul class="project-menu">
             <li class="project-list-item">all</li>
@@ -46,29 +51,31 @@
         <!--PROJECT IMAGE CONTAINER-->
         <div class="img-container">
             <div class="row">
-                <div class="span-1">
+                <div class="span-4">
                     <img src="./Images/pexels-max-avans-5101383.jpg" alt="">
                 </div>
-                <div class="span-1">
+                <div class="span-4">
                     <img src="./Images/pexels-adrien-olichon-2464430.jpg" alt="">
                 </div>
-                <div class="span-1">
-                    <img src="./Images/pexels-tobit-nazar-nieto-hernandez-3199265.jpg" alt="">                    
-                </div>    
+                <div class="span-4">
+                    <img src="./Images/pexels-tobit-nazar-nieto-hernandez-3199265.jpg" alt="">
+                </div>
             </div>
         </div>
 
         <!--ABOUT-->
         <div class="section-container">
-            <h5 class="section-header">about pavilion</h5>    
+            <h5 class="section-header">about pavilion</h5>
         </div>
         <p class="about-content">
-            <span>pavilion architecture</span> is dedicated to providing you the best of architecture, with a focus on dependability and design. We're working to turn our passion for architecture into inspiration. We hope you enjoy our architecture as much as we enjoy offering them to you.
+            <span>pavilion architecture</span> is dedicated to providing you the best of architecture, with a focus on
+            dependability and design. We're working to turn our passion for architecture into inspiration. We hope you
+            enjoy our architecture as much as we enjoy offering them to you.
         </p>
         <!--SERVICES-->
         <div class="section-container">
             <span class="section-sub-header">our services</span>
-            <h5 class="section-header">we specialize in design</h5>    
+            <h5 class="section-header">we specialize in design</h5>
         </div>
 
         <!--SERVICE IMAGE CONTAINER-->
@@ -77,34 +84,39 @@
                 <img src="./Images/pexels-max-vakhtbovych-6283960.jpg" alt="">
                 <div class="service-content-description">
                     <h6 class="service-header">interior design</h5>
-                    <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>
+                        <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                            sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>
                 </div>
             </div>
             <div class="service-content">
                 <img src="./Images/pexels-max-vakhtbovych-6283967.jpg" alt="">
                 <div class="service-content-description">
                     <h6 class="service-header">architecture</h5>
-                    <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>
+                        <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                            sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>
                 </div>
             </div>
         </div>
 
         <!--TEAM-->
-        <div class="team-content">
-            <div class="team-member-content">
+        <div class="team-content row">
+            <div class="team-member-content span-4">
                 <img src="./Images/pexels-mentatdgt-937481.jpg" alt="">
                 <h6 class="team-member-header">senior architect</h6>
-                <p class="team-member-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>                
+                <p class="team-member-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                    sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>
             </div>
-            <div class="team-member-content">
+            <div class="team-member-content span-4">
                 <img src="./Images/pexels-mentatdgt-1024311.jpg" alt="">
                 <h6 class="team-member-header">marketing strategist</h6>
-                <p class="team-member-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>                 
+                <p class="team-member-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                    sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>
             </div>
-            <div class="team-member-content">
+            <div class="team-member-content span-4">
                 <img src="./Images/pexels-linkedin-sales-navigator-2182970.jpg" alt="">
                 <h6 class="team-member-header">senior engineer</h6>
-                <p class="team-member-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>                 
+                <p class="team-member-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                    sodales dignissim dolor non accumsan. Integer tempor at orci sed maximus.</p>
             </div>
         </div>
         <div class="footer">
@@ -116,4 +128,5 @@
         </div>
     </div>
 </body>
+
 </html>
